--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -100,7 +100,8 @@
                 <div class="travelinfo-box">
                     <img src="./static/schedule.svg" class="travelinfo-img">
                     <p class="travelinfo-title">Arrive 30 minutes in advance</p>
-                    <p class="travelinfo-txt">We will not delay our cruises because of you.</p>
+                    <p class="travelinfo-txt">All our boats depart at 09:00. <br> We will not be delayed because of you.
+                    </p>
                 </div>
                 <div class="travelinfo-box">
                     <img src="./static/face-mask.svg" class="travelinfo-img">
@@ -111,7 +112,7 @@
                 <div class="travelinfo-box">
                     <img src="./static/covid.svg" class="travelinfo-img">
                     <p class="travelinfo-title">Passengers must be vaccinated</p>
-                    <p class="travelinfo-txt">Bring a valid certificate of vaccination.</p>
+                    <p class="travelinfo-txt">Bring a valid certificate of full vaccination.</p>
                 </div>
             </div>
         </div>
