Fixed the problem with the calendar and some confirmation fixes

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/confirmation.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/confirmation.html
@@ -8,8 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/general.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="css/customelements/calendar.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/confirmation.css" media="screen" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/customelements/navbar.js"></script>
@@ -18,14 +17,11 @@
     <script src="js/confirmation.js"></script>
 </head>
 <body>
+    <custom-navbar></custom-navbar>
     <div id="container">
-        <div id="content">
-            
-            <div id="order">
-                
-
-            </div>
-        </div>
+        <div id="content"></div>
+        <div id="return-content"></div>
     </div>
+    <custom-footer></custom-footer>
 </body>
 </html>
