--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
@@ -25,14 +25,14 @@
         <div id="content">
             <h1>Place order</h1>
             <div id="ticketInfo">
-                <h2>Selected tickets</h2>
+                <h2 id="selected-title">Selected tickets</h2>
                 <div id="ticketInfo-trips">
                     <p id="tripInfo"></p>
                     <p id="tripInfo2"></p>
                 </div>
             </div>
             <div id="personalInfo">
-                <h2>Personal information</h2>
+                <h2 id="personal-title">Personal information</h2>
                 <form id="orderForm" onsubmit="return false">
 
                     <div class="form-check-group">
@@ -76,8 +76,9 @@
                         <input type="text" name="cityName" id="cityName" placeholder="City name" />
                         <span id="failCity" class="form-check-group-fail"></span>
                     </div>
+                    <input type="submit" onclick="validateAndOrder()" value="Order ticket" aria-roledescription="button" />
                 </form>
-                <input type="submit" onclick="validateAndOrder()" value="Order ticket" aria-roledescription="button" />
+                
             </div>
         </div>
     </main>
