--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/confirmation.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/confirmation.html
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Confirmation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/general.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/confirmation.css" media="screen" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -16,6 +18,7 @@
     <script type="text/javascript" src="js/customelements/calendar.js"></script>
     <script src="js/confirmation.js"></script>
 </head>
+
 <body>
     <custom-navbar></custom-navbar>
     <div id="container">
@@ -24,4 +27,5 @@
     </div>
     <custom-footer></custom-footer>
 </body>
+
 </html>
