--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -80,11 +80,11 @@
                 <div id="orderbox-extend">
                     <div id="body-calendar">
                         <div>
-                            <div class="calendar outbound"></div>
+                            <div id="calendar-outbound" class="calendar outbound"></div>
                             <div class="ticket-details" id="outbound-details"></div>
                         </div>
                         <div>
-                            <div class="calendar inbound" class="ticket-details" id="outbound-details"></div>
+                            <div id="calendar-inbound" class="calendar inbound"></div>
                             <div class="ticket-details" id="inbound-details"></div>
                         </div>
                     </div>
