Made code DRY, fixed inbound not showing on confirmation page

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/confirmation.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/confirmation.html
@@ -16,15 +16,19 @@
     <script type="text/javascript" src="js/customelements/navbar.js"></script>
     <script type="text/javascript" src="js/customelements/footer.js"></script>
     <script type="text/javascript" src="js/customelements/calendar.js"></script>
-    <script src="js/confirmation.js"></script>
+    <script type="text/javascript" src="js/utils.js"></script>
+    <script type="text/javascript" src="js/confirmation.js"></script>
 </head>
 
 <body>
     <custom-navbar></custom-navbar>
-    <div id="container">
-        <div id="content"></div>
-        <div id="return-content"></div>
-    </div>
+    <main>
+        <div id="content">
+            <div id="container">
+
+            </div>
+        </div>
+    </main>
     <custom-footer></custom-footer>
 </body>
 
