--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/customelements/calendar.css" media="screen" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
+    <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/customelements/navbar.js"></script>
     <script type="text/javascript" src="js/customelements/footer.js"></script>
@@ -81,11 +82,11 @@
                     <div id="body-calendar">
                         <div>
                             <div id="calendar-outbound" class="calendar outbound"></div>
-                            <div class="ticket-details" id="outbound-details"></div>
+                            <div class="ticketInfo" id="outbound-details"></div>
                         </div>
                         <div>
                             <div id="calendar-inbound" class="calendar inbound"></div>
-                            <div class="ticket-details" id="inbound-details"></div>
+                            <div class="ticketInfo" id="inbound-details"></div>
                         </div>
                     </div>
                 </div>
