total price and pasanger amount added

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
@@ -33,6 +33,7 @@
                     <div id="tripInfo" class="tripInfo"></div>
                     <div id="tripInfo2" class="tripInfo"></div>
                 </div>
+                <div id="priceInfo"></div>
             </div>
             <div id="personalInfo">
                 <h2 id="personal-title">Personal information</h2>
