Added totalPrice to confirmation; transferred the calculateTotalPrice and placeTotal to utils and generalised it

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/confirmation.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/confirmation.html
@@ -26,6 +26,7 @@
         <div id="content">
             <div id="container">
             </div>
+            <div id="priceInfo"></div>
         </div>
     </main>
     <custom-footer></custom-footer>
