Fixed some comments and renamed a file

--- a/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
+++ b/SemesterOppgave1/SemesterOppgave1/wwwroot/order.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="js/customelements/customalert.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/order.js"></script>
-    <script type="text/javascript" src="js/validering.js"></script>
+    <script type="text/javascript" src="js/validation.js"></script>
     <title>Holbergs Båte - Database</title>
 </head>
 
